<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">eSheepFinder</string>
    <string name="begin_tour">Begin Tour</string>
	<string name="quit_app">Quit</string>
	<string name="site_prompt">Please Choose Your Current Site</string>
	<string name="app_title">Digital PathFinder</string>
	<string name="tour_prompt">Please select a tour</string>
	<string name="tour_begin">Start at the beginning</string>
	<string name="menu_updater">Launch Updater</string>
	<string name="menu_daytime">Change Screen Daytime</string>
	<color name="green">#008000</color> 
  	<color name="pink">#FF00FF</color> 
  	<color name="black">#000000</color> 
  	<color name="red">#ff0000</color> 
 	<color name="daytime">#8ABDDF</color> 
  	<color name="daytime2">#F0E6D5</color> 
  	<color name="darkgrey">#676156</color> 
  	<color name="offblue">#416C95</color> 
	<string name="menu_about">About Digital PathFinder</string>
	<string name="menu_home">Home</string>
	<string name="updater">Site Updater</string>
	<string name="start_update">Start</string>
	<string name="pause_update">Pause</string>
	<string name="cancel_update">Cancel</string>
	<string name="resume_update">Resume</string>
	<string name="retry_update">Retry</string>
	<string name="update_available">Update Available!</string>
	<string name="update_started">Update Started</string>
	<string name="new_site">New Site!</string>
	<string name="up_to_date">At latest version</string>
	<string name="update_paused">Paused</string>
	<string name="update_failed">Failed</string>
</resources>
