<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/app_title"
    android:textSize="35px"
    android:textStyle="bold"
    android:layout_marginBottom="30px" />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:textSize="20px"
    android:layout_marginLeft="10px"
    android:layout_marginBottom="15px"
    android:text="@string/site_prompt"/>
    <Spinner 
    android:id="@+id/SiteSelect" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:prompt="@string/site_prompt"
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
    android:layout_marginBottom="20px">
    </Spinner>
    <TextView 
    android:text="@string/tour_prompt" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:textSize="20px"
    android:layout_marginLeft="10px"
    android:layout_marginBottom="15px">
    </TextView>
    <Spinner 
    android:id="@+id/TourSelect" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:prompt="@string/tour_prompt"
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
    android:layout_marginBottom="20px">
    </Spinner>
    <CheckBox android:text="@string/tour_begin" 
    android:id="@+id/StartTourBegin" 
    android:layout_marginLeft="10px"
    android:layout_marginRight="13px"
    android:layout_marginBottom="15px"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
    </CheckBox>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
    	<Button
		android:id="@+id/begin_button"
		android:layout_height="wrap_content" 
		android:layout_weight="1"
		android:layout_width="wrap_content"
		android:layout_marginLeft="10px"
		android:layout_marginBottom="5px"
		android:textColor="@color/green"
		android:textSize="18px"
		android:text="@string/begin_tour"
		/>
		<Button
		android:id="@+id/quit_button"
		android:layout_height="wrap_content" 
		android:layout_weight="2"
		android:layout_width="wrap_content"
		android:layout_marginLeft="10px"
		android:layout_marginRight="10px"
		android:layout_marginBottom="5px"
		android:textColor="@color/red"
		android:textSize="18px"
		android:text="@string/quit_app"
		/>
	</LinearLayout>
		














</LinearLayout>
